# llm-agent-control-plane-lab

./: .env.example  .env.production.example  .gitignore  .gitleaks.toml  AGENTS.md  AUTHORS.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  PROJECT_DOCTRINE.md  README.md  ROADMAP.md  SECURITY-CONTROLS.md  SECURITY.md  docker-compose.production.yml  docker-compose.yml  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
docs/: approval-workflow.md  architecture.md  artifact-verification.md  audit-event-taxonomy.md  audit-review-playbook.md  branch-protection.md  commit-signing-guidance.md  defensive-controls.md  deployment-boundaries.md  deployment-checklist.md  deployment-threat-model.md  enterprise-integration-plan.md  enterprise-readiness-checklist.md  github-actions-trust.md  github-publication-readiness.md  github-release-notes-v0.1.0.md  github-release-notes-v0.1.1.md  github-release-notes-v0.1.2.md  github-release-notes-v0.2.0.md  github-release-notes-v0.2.1.md  github-release-notes-v0.2.2.md  github-release-notes-v0.2.3.md  github-release-notes-v0.2.4.md  github-release-notes-v0.2.5.md  github-release-notes-v0.2.6.md  github-release-notes-v0.2.7.md  github-release-notes-v0.2.8.md  github-release-notes-v0.2.9.md  helm-guidance.md  identity-integration.md  kms-secret-management.md  llm-adapter.md  operator-runbook.md  production-hardening.md  provenance.md  rate-limiting-edge-controls.md  release-checklist.md  release-provenance.md  release-security-checklist.md  security-gap-assessment.md  (+7 more)
policies/: default.yaml  (+1 more)
(+86 files in other folders)
