[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-agent-control-plane-lab"
version = "0.1.0"
description = "Defensive reference lab for securing tool-connected LLM agents with an external control plane"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.115.0,<1",
    "pydantic>=2.7.0,<3",
    "pyyaml>=6.0.1,<7",
    "uvicorn>=0.30.0,<1",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0,<1",
    "bandit>=1.7.9,<2",
    "mypy>=1.11.0,<2",
    "pip-audit>=2.7.0,<3",
    "pytest>=9.0.3,<10",
    "ruff>=0.6.0,<1",
    "types-PyYAML>=6.0.12.20240808",
]

[project.scripts]
agent-control-plane-demo = "agent_control_plane.demo:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "S"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
no_implicit_optional = true
packages = ["agent_control_plane"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.bandit]
exclude_dirs = ["tests"]
